2005-03-02  Jim Meyering  <jim@meyering.net>

	* Makefile.am (libcvs_a_SOURCES): Add the following to support
	the GNULIB closeout module: closeout.c, closeout.h, quotearg.c,
	quotearg.h, __fpending.h.
	* closeout.c, closeout.h: New files.
	* quotearg.c, quotearg.h: New files.
	* __fpending.c, __fpending.h: New files.
	* Makefile.gnulib: Regenerate.

2005-03-02  Derek Price  <derek@ximbiot.com>

	* gettext.h, setenv.c, vasnprintf.c, vasprintf.c: Update from GNULIB.

2005-03-01  Derek Price  <derek@ximbiot.com>

	Update installed GNULIB modules.
	* Makefile.am: Tweak for new GNULIB updates.
	* alloca_.h, dup2.c, error.c, ftruncate.c, getdate.c, getdate.y,
	getopt_.h, gettext.h, gettime.c, malloc.c, mkdir.c, mktime.c,
	realloc.c, rename.c, save-cwd.c, strstr.c, strtoul.c, timespec.h,
	xgetcwd.c: Update these files.
	* chdir-long.c, chdir-long.h, getcwd.c, getcwd.h, mempcpy.c, mempcpy.h,
	memrchr.c, memrchr.h, openat.c, openat.h, strstr.h, strtol.c: New files
	from GNULIB.

2005-03-01  Derek Price  <derek@ximbiot.com>

	* xtime.h: Remove obsolete timeb stuff.

2005-02-20  Mark D. Baushke  <mdb@cvshome.org>

	* xgethostname.c (xgethostname): Check for ENOMEM, which is
	returned by OSX/Darwin if the specified buffer is not large
	enough for the hostname.
	(Problem reported by Neil Conway <neilc@samurai.com>.)

2005-02-08  Derek Price  <derek@ximbiot.com>

	* fncase.c (OSX_filename_classes): Mac OSX doesn't need \ mapped to /.
	* system.h (FOLD_FN_CASE): Clarify comment.

2005-01-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Update copyright notices.

2004-12-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add Makefile.gnulib.

2004-11-30  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dep: Regenerated for "../cvsnt.dsp" change.
	* libcvs.mak: Regenerated for "../cvsnt.dsp" change.

2004-11-21  Mark D. Baushke  <mdb@cvshome.org>

	* libcvs.dep, libcvs.dsp, libcvs.mak: Add "xgethostname.c" to
	project.

2004-11-19  Derek Price  <derek@ximbiot.com>